--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,6 @@
++ Add support of regional and composite events for trades and quotes
++ Add API functions to get current address and other properties from connection
+
 Version 5.2.3:
 * Fix authentication with Auther other than
   default Login/Password one.
