--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,6 @@
+Version 5.3.2
++ Regional book is added
+
 Version 5.3.0:
 + Add support of regional and composite events for trades and quotes
 + Add API functions to get current address and other properties from connection
