--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,9 @@
+Version 5.4.0
+* [Samples] Add the ability to change the number of displayed records
+  - The optional command line parameter "[-l records_print_limit]" is added (0 - unlimited).
+  - Affected samples: dxf_client, dxf_order_view_sample
+* dxf_simple_order_book has been renamed to dxf_simple_order_book_sample
+
 Version 5.3.2
 + Regional book is added
 
@@ -18,7 +24,7 @@ Version 5.2.1
   to prevent GC from collecting live subscription objects.
 
 Version 5.2.0
-+ All events are sunchronized with C API and Java API
++ All events are synchronized with C API and Java API
   Many small changes in field names.
 + Some utility data is moved to com.dxfeed.api.data namespace,
   please include it as needed.
