--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,6 @@
+Version 5.5.2
+* Fixed a memory leak in ServerMessageProcessor
+
 Version 5.5.1
 * Data collection in OrderViewSubscription has been greatly accelerated
 
