--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,6 @@
+Version 5.6.1
+* Fixed an issue with incorrect index field calculation
+
 Version 5.6.0
 * Fixed Snapshot sample. Unused event type parameter has been removed.
 
