--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,6 @@
+Version 5.6.2
+* Subscription process was accelerated by sorting internal symbol collection
+
 Version 5.6.1
 * Fixed an issue with incorrect index field calculation
 
