--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,7 @@
+Version 5.6.3
+* Fixed multiple symbols subscription in samples on Linux
+* Fixed formatting and logging of indices, strings, timestamps and identifiers on Linux
+
 Version 5.6.2
 * Subscription process was accelerated by sorting internal symbol collection
 
