--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,10 @@
+* [DXFC-173] [Samples] Added additional command line parameters to the `dxf_simple_order_book_sample` sample:
+  - host:port - The address of dxfeed server (exmaple: demo.dxfeed.com:7300)
+  - symbol    - The instrument symbol: IBM, MSFT, AAPL, ...
+  - date      - The date of time series event in the format YYYY-MM-DD
+  - source    - The source for order events (default: NTV): NTV,NFX,ESPD,XNFI,ICE,ISE,DEA,DEX,BYX,BZX,BATE,CHIX,CEUX,BXTR,IST,BI20,ABE,FAIR,GLBX,ERIS,XEUR,CFE,SMFE
+  -l <limit>  - The number of displayed bids or asks in a order book (0 - unlimited [FOD], default: 10)
+  -T <token>  - The authorization token
 * [DXFC-174] Added the ability to subscribe to regional quotes. Now Quote subscription requests both composite and regional events. Please, use the `Scope` field to filter events.
 * [DXFC-168] The list of supported order sources was updated: NTV,NFX,ESPD,XNFI,ICE,ISE,DEA,DEX,BYX,BZX,BATE,CHIX,CEUX,BXTR,IST,BI20,ABE,FAIR,GLBX,ERIS,XEUR,CFE,SMFE
 
