[DXFC-185] New order source for cboe C2 options

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,6 @@
+Version 5.12.0
+* [DXFC-185] The new order source for cboe C2 options was added: C2OX
+
 Version 5.11.0
 * [DXFC-182] The new order (price level) sources were added: ntv, glbx, xeur
 * [DXFC-178] Added the ability to log received and transmitted data blocks
