--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,6 @@
+Version 5.13.0
+* [DXFC-189] Fixed bug with inability to receive orders with Scope = Aggregate
+
 Version 5.12.0
 * [DXFC-185] The new order source for cboe C2 options was added: C2OX
 
