--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,7 @@
+Version 6.0.0
+* [DXFC-191] Fixed bug where crashes and memory corruption occurred when adding and removing symbols
+* [DXFC-190] Fixed bug with memory corruption during connection restoration and changing the list of subscription symbols
+
 Version 5.13.0
 * [DXFC-189] Fixed bug with inability to receive orders with Scope = Aggregate
 
