--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -3,6 +3,10 @@ Version 6.0.0
 * [DXFC-190] Fixed bug with memory corruption during connection restoration and changing the list of subscription symbols
 * [DXFC-184] [Breaking changes] The order source for subscribing to aggregated data (MarketMaker) has been changed from COMPOSITE_ASK|BID to AGGREGATE_ASK|BID.
   This is now compliant with Java API
+* [DXFC-192] Fixed a bug with C-API SEGFAULT in TLS mode when sending data on reconnection
+* [DXFC-193] Fixed a bug with excess memory consumption when retrieving Option symbols
+* [DXFC-171] Added descriptions to all C-API error codes
+* [DXFC-187] Fixed a bug with a second addition o the same symbols
 
 Version 5.13.0
 * [DXFC-189] Fixed bug with inability to receive orders with Scope = Aggregate
