--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,6 @@
+Version 6.1.0
+* Migrated to C-API 6.1.0
+
 Version 6.0.1
 * [DXFC-194] Fixed bug with System.AccessViolationException while closing connection
 
