--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,19 @@
+Version 6.2.0
+* [DXFC-205] Fixed a bug with disconnecting (by server side) when removing symbols if no symbols have been added
+* [DXFC-203] Fixed segfaults and debug assertion failings when clearing symbols in a subscription's event listener
+* [DXFC-201] Added the ability to call logging initialization again without any effect
+* [DXFC-204] Added the support for token-based authentication to InstrumentProfileReader & InstrumentProfileConnection
+  - Added functions: `InstrumentProfileReader.ReadFromFile(string address, string token)`, 
+    `URLInputStream.OpenConnection(string url, string token)`,
+    `URLInputStream.OpenConnection(Uri url, string token)` 
+  - Added constructors: `InstrumentProfileConnection(string address, string token)`
+  - Added the support for basic authentication to InstrumentProfileConnection:
+    - Added functions: `URLInputStream.OpenConnection(string url, string login, string password)`,
+      `URLInputStream.OpenConnection(Uri url, string login, string password)`
+    - Added constructors: `InstrumentProfileConnection(string address, string login, string password)`
+  - [Samples] Added additional command line parameter to pass a bearer token. Samples that were affected: 
+    dxf_instrument_profile_sample, dxf_instrument_profile_live_sample
+
 Version 6.1.0
 * Migrated to C-API 6.1.0
 
