--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -2,7 +2,11 @@ Version 7.0.0
 * [DXFC-175] [Breaking changes] Extended Trade and Profile events to support additional fields from QD records
   - the `_52HighPrice` & `_52LowPrice` `IDxProfile` (and `NativeProfile`) properties were renamed to `High52WeekPrice` & 
     `Low52WeekPrice` respectively
-  - the `Change` property was added to `IDxTradeETH` and `NativeTradeETH` classes
+  - the `Change` property was added to the `IDxTradeETH` and `NativeTradeETH` classes
+* [DXFC-207] [Breaking changes] Extended the Trade and TradeETH events with new field dayId
+  - the `DayId` property was added to to the `IDxTrade`, `NativeTrade`, `IDxTradeETH` and `NativeTradeETH` classes. 
+    `DayId` - identifier of the day that `Trade` or `TradeETH` represents. Identifier of the day is the number of days 
+    passed since January 1, 1970.
 
 Version 6.2.0
 * [DXFC-205] Fixed a bug with disconnecting (by server side) when removing symbols if no symbols have been added
