--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -2,6 +2,7 @@ Version 7.2.0
 * [DXFC-212] Extended the Order event for Full Order Book
   - the `Action`, `ActionTime`, `OrderId`, `AuxOrderId`, `TradeId`, `TradePrice`, `TradeSize` fields were added to the Order event
     See the `OrderAction` enum description (documentation) where it is indicated in which cases which fields will be filled.
+* [DXFC-211] Fixed a bug with broken construction of order snapshots (books), based on Quote (order scope = Composite|Regional) & MarketMaker (order scope = Aggregate) events    
 
 Version 7.1.0
 * [DXFC-209] Implemented the heartbeat semantics with payload
