--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,9 +1,10 @@
 Version 8.0.0
+* [DXFC-215] [Breaking changes] The `IDxFundamentalListener` interface renamed to `IDxSummaryListener` and  the `OnFundamental` method renamed to `OnSummary`
 * [DXFC-222] Created wrapper for PriceLevelBook.c
   - Added the `IDxPriceLevelBook`, `IDxPriceLevelBookListener` interfaces
   - Added the `NativePriceLevelBook` class (see documentation)
   - Added the `CreatePriceLevelBook` methods to `NativeConnection` class (see documentation)
-  - Added the `dxf_price_level_book_sample` to demostrate how to use this wrapper
+  - Added the `dxf_price_level_book_sample` to demonstrate how to use this wrapper
 
 
 Version 7.6.0
