[DXFC-231] Convert the types and representations of certain event fields to store WideDecimal

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,11 +1,15 @@
 Version 8.0.0
+* [DXFC-231] [Breaking changes] Converted the types and representations of certain event fields to store WideDecimal
+  - Fields that are now of type double: `IDxOrderBase.Size`, `IDxOrderBase.Size`, `IDxTradeBase.Size`,
+    `IDxQuote.BidSize`, `IDxQuote.AskSize`, `IDxSummary.OpenInterest`, `IDxProfile.DivFreq`,
+    `IDxTimeAndSale.Size`, `IDxCandle.OpenInterest`
+  - Added field 'IDxOrderBase.ExecutedSize' (`double`) which is related to FOB support
 * [DXFC-215] [Breaking changes] The `IDxFundamentalListener` interface renamed to `IDxSummaryListener` and  the `OnFundamental` method renamed to `OnSummary`
 * [DXFC-222] Created wrapper for PriceLevelBook.c
   - Added the `IDxPriceLevelBook`, `IDxPriceLevelBookListener` interfaces
   - Added the `NativePriceLevelBook` class (see documentation)
   - Added the `CreatePriceLevelBook` methods to `NativeConnection` class (see documentation)
   - Added the `dxf_price_level_book_sample` to demonstrate how to use this wrapper
-
 
 Version 7.6.0
 * [DXFC-224] Fixed a bug with a race conditions occurred while reading files
