[DXFC-238] Add the ability to set PriceLevelBook symbol or orders sources

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,11 @@
+Version 8.3.0
+* [DXFC-254] The amount of memory used to store the symbols required for a subscription has been reduced by several times.
+* [DXFC-238] Added the ability to set PriceLevelBook symbol or orders sources. Added the new methods:
+  - `IDxPriceLevelBook.SetSymbol(string newSymbol)`
+  - `IDxPriceLevelBook.SetSources(string[] newSources)`
+  - `IDxPriceLevelBook.AddSymbols(params CandleSymbol[] symbols)`
+  See documentation
+
 Version 8.2.0
 * [DXFC-220] Added the ability to retrieve events starting from a specific date and ending with a specific date.  
   Added the new methods:  
