--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -4,15 +4,24 @@ Version 8.3.0
   - `IDxPriceLevelBook.SetSymbol(string newSymbol)`
   - `IDxPriceLevelBook.SetSources(string[] newSources)`
   - `IDxPriceLevelBook.AddSymbols(params CandleSymbol[] symbols)`
-  <br/>
-  See documentation
+  
+  See documentation.
 * [DXFC-255] Added a simple way to get data from CandleWebService.
   - Added the `CandleDataConnection` class with method 
   `Task<Dictionary<CandleSymbol, List<IDxCandle>>> GetCandleData(List<CandleSymbol> symbols, DateTime fromTime, DateTime toTime, CancellationToken cancellationToken)` 
-  that retrieves candles by symbols and start\stop DateTime.
-  <br/>
-  See documentation.
+  that retrieves candles by symbols and start\stop DateTime. See documentation.
   - Add the `dxf_candle_data_retrieving_sample` that demonstrates how to use `CandleDataConnection`
+* [Deprecated] These classes, enums, interfaces, delegates and methods are deprecated and will be removed in 9.0.0 version:
+  - DXFeedSymbolsUpdateEventArgs
+  - OnEndpointClosingEventHandler
+  - IDXEndpoint, DXEndpoint, IDXFeed, DXFeed
+  - IDXFeedEventListener, IDxOrderViewListener, DXFeedEventHandler
+  - DXFeedSymbolsUpdateEventHandler, DXFeedSubscriptionClosedEventHandler
+  - IDXFeedSubscription, IDXFeedTimeSeriesSubscription, DXFeedSubscription, DXFeedTimeSeriesSubscription
+  - CreateOrderViewSubscription, OrderViewSubscription
+  - DXFeedLastingEventsCollector, LastingEventsCollector, DXFeedSnapshotCollector
+  
+  Please use NativeConnection, NativeSubscription classes and their methods:
 
 Version 8.2.0
 * [DXFC-220] Added the ability to retrieve events starting from a specific date and ending with a specific date.  
