--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,6 @@
+Version 8.5.0
+* [DXFC-268] Fixed a bug with AccessViolationException when the user called Dispose of the subscription after Dispose of the connection. 
+
 Version 8.4.1
 * [DXFC-264] Added assembly and deployment of XML documentation
   Now dxf_api.xml and dxf_native.xml files come inside zip bundle. You can use them to get API documentation from the IDE.
