--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -3,6 +3,12 @@ Version 8.5.0
 * [DXFC-267] Fixed a bug with possible call of callbacks/delegates from the native library when the memory of subscriptions/connections objects is cleared by the GC 
 * [DXFC-268] Fixed a bug with AccessViolationException when the user called Dispose of the subscription after Dispose of the connection. 
 * [DXFC-271] Fixed a bug with incorrect UTC timezone when requesting data from the CandleWebService
+* [DXFC-269] API common enhancements
+  - The dxf_order_view_sample example now uses one symbol and source.
+  - All native event fields now have public setters.
+  - All native events now have public copy constructors and default constructors.
+  - If no date\time is specified, then dxf_events_sample is not subscribed to time series.
+  - dxf_ipf_connect_sample: added an ability to set bearer token
 
 Version 8.4.1
 * [DXFC-264] Added assembly and deployment of XML documentation
