--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,7 @@
+Version 8.6.2
+* [DXFC-327] Fixed a bug where the timestamp = 0 was set for the price level when processing a removed order.
+* [DXFC-328] Fixed a bug where UPDATE lists with non-existent price levels sometimes appear in PLB incremental updates.
+
 Version 8.6.1
 * Fixed possible symbol corruption
 * Fixed a bug where price level updates could be treated as volume increases.
