--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,5 +1,6 @@
 Version 8.7.0
-* [DXFC-394] [Breaking changes] Disabled mixing of specified addresses for connection in the form: (hos1:port1)(host2:port2)(host3:port3)
+* [DXFC-395] Add the ability to enumerate all resolved IP addresses by DNS names. IP addresses will be shuffled.
+* [DXFC-394] Disabled shuffling of specified addresses (DNS names) for connection in the form: (hos1:port1)(host2:port2)(host3:port3)
 * [DXFC-334] Fixed a bug with precision error when converting WideDecimal to Double
 * [DXFC-335] Fixed a bug when candle symbols are not removed from the subscription
 
